# kevin_ling_precision_landing_fork

./: README.md
control/: README
control/quadrotor/: README
control/quadrotor/qr_outerloop_pid/: CMakeLists.txt  README  mainpage.dox  package.xml
control/quadrotor/qr_outerloop_pid/include/qr_outerloop_pid/: height_controller.h  outerloop_pid_controller.h  translation_controller.h  yaw_controller.h
control/quadrotor/qr_outerloop_pid/launch/: pelican_ips.launch  pelican_parameters.yaml  pelican_simulator.launch
control/quadrotor/qr_outerloop_pid/src/: height_controller.cc  outerloop_pid_controller.cc  pelican_outerloop_pid_node.cc  translation_controller.cc  yaw_controller.cc
control/quadrotor/qr_outerloop_pid/srv/: SetTranslationControllerStatus.srv
control/wave_control/: CMakeLists.txt  package.xml
control/wave_control/include/wave_control/: pid_controller_base.h
control/wave_control/src/: pid_controller_base.cc
estimation/: README
estimation/quadrotor/qr_gps_estimator/: CMakeLists.txt  package.xml
estimation/quadrotor/qr_gps_estimator/old_inertial_estimation_code/: KalmanFilterBase.cpp  KalmanFilterBase.hpp  gps.cpp  gps.h  inertial_estimator_impl.cpp  inertial_estimator_impl.h  inertial_estimator_main.cpp
estimation/quadrotor/qr_gps_estimator/src/: gps.cc  relative_position_estimator_main.cc
estimation/quadrotor/qr_ips_estimator/: CMakeLists.txt  package.xml
estimation/quadrotor/qr_ips_estimator/include/qr_ips_estimator/: ips_differentiator.h
estimation/quadrotor/qr_ips_estimator/src/: ips_differentiator.cc  pelican_ips_estimator_node.cc
estimation/quadrotor/qr_relative_target_estimator/: CMakeLists.txt  mainpage.dox  package.xml
estimation/quadrotor/qr_relative_target_estimator/src/: height_estimator.cc  height_estimator.h  relative_height_estimator.cc  relative_height_estimator.h  relative_position_estimator_main.cc  target_position_estimator.cc  target_position_estimator.h
estimation/wave_estimation/: CMakeLists.txt  package.xml
estimation/wave_estimation/include/wave_estimation/: kalman_filter_base.h
estimation/wave_estimation/src/: kalman_filter_base.cc
mission/: README
mission/quadrotor/qr_apriltag_follower/: CMakeLists.txt  package.xml
mission/quadrotor/qr_apriltag_follower/include/qr_apriltag_follower/: apriltag_follower_node.h
mission/quadrotor/qr_apriltag_follower/launch/: apriltag_follower.launch  apriltag_follower_no_sonar.launch  apriltag_follower_pelican_parameters.yaml  simulation_test.launch
mission/quadrotor/qr_apriltag_follower/src/: apriltag_follower_node.cc
utils/: README
utils/wave_msgs/: CMakeLists.txt  package.xml
utils/wave_msgs/msg/: ENUWithCovariances.msg  PidLog.msg  QRAltitudePid.msg  QRControl.msg  QRPosition.msg  QRPositionPid.msg  QRRelativeHeight.msg  QRStateEstimate.msg  QRYawPid.msg  qr_state.msg
utils/wave_pelican/: CMakeLists.txt  mainpage.dox  package.xml
utils/wave_pelican/include/wave_pelican/: pelican_utils.h
utils/wave_pelican/src/: pelican_utils.cc
utils/wave_pelican/test/: wave_pelican_test.cc
utils/wave_utils/: CMakeLists.txt  mainpage.dox  package.xml
utils/wave_utils/include/wave_utils/: wave_dsp.h  wave_math.h  wave_string.h
utils/wave_utils/src/: wave_dsp.cpp  wave_math.cpp  wave_string.cpp
utils/wave_utils/test/: wave_utils_tests.cpp
vision/: README
vision/april_tags_ueye/: CMakeLists.txt  README  package.xml
vision/april_tags_ueye/include/AprilTags/: TagDetector.h  kf_generic.h
vision/april_tags_ueye/launch/: april_tag_publish_debug_image.launch
vision/april_tags_ueye/src/: Edge.cc  TagDetection.cc  TagDetector.cc  WaveUEyeThread.cpp  WaveUEyeThread.hpp  april_finder.cpp  april_kf_main.cpp  kf_generic.cpp  ros_april.cpp
