<?xml version="1.0"?>
<package>
  <name>wave_control</name>
  <version>0.0.0</version>
  <description>A library for controller implementations.</description>

  <maintainer email="kling@uwaterloo.ca">Kevin Ling</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>wave_msgs</build_depend>
  <build_depend>wave_utils</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>wave_msgs</run_depend>
  <run_depend>wave_utils</run_depend>


  <export>
  </export>
</package>
