<package>
  <name>wave_pelican</name>
  <version>0.0.0</version>
  <description>A library of conversion functions between SI units and Asctec units. Also includes Pelican specific constants.</description>
  <author> Kevin Ling </author>
  <maintainer email="kling@uwaterloo.ca"> Kevin Ling </maintainer>
  <license> BSD </license>
  <buildtool_depend> catkin </buildtool_depend> 
  <build_depend> roscpp </build_depend>
  <build_depend> asctec_hl_comm </build_depend>
  <run_depend> roscpp </run_depend>
  <run_depend> asctec_hl_comm </run_depend>

</package>


