<?xml version="1.0"?>
<package>
  <name>wave_utils</name>
  <version>0.0.0</version>
  <description>wave_utils</description>
  <maintainer email="kling@todo.todo">kling</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
