<?xml version="1.0"?>
<package>
  <name>qr_outerloop_pid</name>
  <version>0.0.0</version>
  <description>qr_outerloop_pid</description>
  <maintainer email="kling@todo.todo">kling</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>asctec_hl_comm</build_depend>
  <build_depend>wave_msgs</build_depend>
  <build_depend>wave_utils</build_depend>
  <build_depend>wave_pelican</build_depend>
  <build_depend>wave_control</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wave_msgs</run_depend>
  <run_depend>wave_utils</run_depend>
  <run_depend>wave_pelican</run_depend>
  <run_depend>wave_control</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>
