<?xml version="1.0"?>
<package>
  <name>qr_relative_target_estimator</name>
  <version>0.0.0</version>
  <description>Estimates the position, velocity, and yaw of the quadrotor relative to an arbitrary target.</description>

  <maintainer email="kling@uwaterloo.ca">kling</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wave_estimation</build_depend>
  <build_depend>wave_utils</build_depend>
  <build_depend>wave_msgs</build_depend>
  <build_depend>wave_pelican</build_depend>
  <build_depend>asctec_hl_comm</build_depend>
  <build_depend>px_comm</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>wave_estimation</run_depend>
  <run_depend>wave_utils</run_depend>
  <run_depend>wave_msgs</run_depend>
  <run_depend>wave_pelican</run_depend>
  <run_depend>asctec_hl_comm</run_depend>
  <run_depend>px_comm</run_depend>

  <export>
  </export>
</package>
